# emotional-agent

./: .gitignore  .theus_memory_registry.jsonl  CONTRACT_FIX_SUMMARY.md  DEBUG_EXP.txt  EMOTION_AGENT_MIGRATION_PLAN.md  README.md  Thiết Kế Xã Hội Agent Có Cảm Xúc Trong Machine Learning - Sơ bộ đánh giá trước nghiên cứu.md  aggregate_baseline.py  analyze_checkpoint.py  analyze_complex.py  analyze_complexity_results.py  analyze_corrected_fatigue_run01.py  analyze_corrected_final_95.py  analyze_corrected_results.py  analyze_darwinism_v2.py  analyze_long_run.py  analyze_metrics.py  analyze_optimized_results.py  analyze_perf.py  analyze_snn.py  analyze_success.py  analyze_tensors.py  append_chapters.py  audit_processes.py  bio_spy.py  calculate_speed.py  check_checkpoint_metrics.py  comparison_report.md  debug_context_guard.py  debug_guards.py  debug_import.py  debug_import_fix.py  debug_log.txt  debug_neurons_out.txt  debug_out.txt  debug_out_final.txt  debug_out_nested.txt  debug_output_8.txt  debug_output_9.txt  debug_run.txt  (+146 more)
theus/: Cargo.toml  build_error.txt  build_helper.py  build_log.txt  build_log_2.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  captured_log.txt  debug_guard.py  debug_output_723.txt  error  error_output.txt  errors.txt  errors_eval_v2.txt  errors_flux.txt  errors_flux_v2.txt  errors_flux_v3.txt  errors_registry.txt  errors_v2.txt  full_test_log.txt  generic_trace.txt  maturin_build.txt  pyproject.toml  release_err.txt  repro_import.py  test_error.txt  verify_dict.py  verify_flux.py  verify_fsm.py  verify_guards.py  verify_install.py  (+3 more)
(+903 files in other folders)
